fixed error that overlapped Search and Form styling

--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -3,17 +3,22 @@
   align-items: center;
 }
 
-input[type="text"] {
-  width: 100%;
-  height: 96px;
-  font-size: 60px;
-  line-height: 1;
-  color: #fff;
-  font-family: Nunito;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  background-color: transparent;
+.td input[type="text"] {
+    width: 100%;
+    height: 96px;
+    font-size: 60px;
+    line-height: 1;
+    color: #fff;
+    font-family: Nunito;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    background-color: transparent;
+}
+
+.td {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 input[type="text"]::placeholder {
@@ -35,10 +40,6 @@ input[type="text"]::placeholder {
   width: 100%;
 }
 
-.td {
-  display: table-cell;
-  vertical-align: middle;
-}
 
 #s-cover {
   width: 1px;
